<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <LinearLayout
            android:id="@+id/laySearch"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editKeyword"
                android:layout_width="0px"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColorHint="@color/hint_text_color"
                android:hint="@string/hint_keyword"
                android:inputType="text"
                android:background="@drawable/edit_border"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSearch"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:text="@string/button_search"
                style="@style/RectangleButton"
                />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            style="?android:attr/progressBarStyleHorizontal"
            />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/default_line_color"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/sub_text_color"
            android:text="@string/msg_list_empty"
            />

    </FrameLayout>
</LinearLayout>